# lfd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  requirements_doc.txt
bigdata/: download.py  upload.py
bootstrap/: bootstrapping.py  constants.py  eval.py  experiments.py  file_utils.py  train_and_test.sh
core/: action_selection.py  constants.py  demonstration.py  environment.py  file_utils.py  registration.py  registration_transfer.py  robot_world.py  sim_util.py  simulation.py  simulation_object.py  transfer.py  transfer_simulate.py
data/: bookshelve.env.xml
doc/: Makefile  apidoc.py  conf.py  documenting.rst  generate_module_rst.sh  index.rst  install.rst  install_gpu.rst  lfd.demonstration.rst  lfd.environment.rst  lfd.registration.rst  lfd.rst  lfd.tpsopt.rst  lfd.transfer.rst  lfd.util.rst  misc.rst  modules.rst  open_index.sh  upload.sh
examples/: box_feedback_transfer.py  drop_objs.py  eval.py  example_utils.py  feedback_transfer.py  feedback_transfer_deprecated.py  linear_test_box_trajopt.py  move_box.py  move_rope.py  obstruction_transfer.py  obstruction_transfer_compare.py  obstruction_transfer_tests.py  plotting_utils.py  record_sim.py  register.py  rope_register_transfer.py  rope_register_transfer_tests.py  test_box_trajopt.py  unified_transfer_two_segments.py
lfd/: action_selection.py  settings.py
lfd/tpsopt/: CMakeLists.txt  README.md  batchtps.py  constants.py  optimization_notes.txt  precompute.py  registration.py  settings.py  tps.cu  tps.py  transformations.py
lfmd/: analyze_data.py
mmqe/: .search.py.swo  .search.py.swp  auto_performance.py  build.py  clutter_eval.py  clutter_label.py  clutter_label_auto.py  constraints.py  defaults.py  do_task_eval.py  features.py  max_margin.py  search.py  shell_cmds.txt
rapprentice/: PR2.py  animate_traj.py  bag_proc.py  berkeley_pr2.py  call_and_print.py  cloud_proc_funcs.py  clouds.py  colorize.py  compute_decomps.py~  conversions.py  eq_solve_exps.py  eval_util.py  kernprof.py  kinematics_utils.py  knot_classifier.py  math_utils.py  planning.py  plotting_openrave.py  pr2_trajectories.py  registration (primus's conflicted copy 2014-01-21).py  registration.py  retiming.py  rope_initialization.py  ropesim.py  svds.py  testing.py  tps.py  yes_or_no.py
registration/: constants.py  plotting_openrave.py  registration.py  registration_gpu.py  solver.py  solver_gpu.py  tps.py
ropesimulation/: constants.py  rope_utils.py  sim_util.py  transfer_simulate.py
scripts/: auto_performance.py  build_all.sh  cleaned_up_glfmd.py  constants.py  cross_val.sh  eval.py  fig8_cross_val.sh  filter_labeled_examples.py  gen_cluttered_tasks.py  gen_tasks.py  glfmd_eval.py  label.py  make_lfd_settings_package.py  parallel_cross_val.sh  print_results.py  record_sim.py  (+5 more)
src/tpsopt/: CMakeLists.txt
(+121 files in other folders)
